[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/story/TavernOpening.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/DialogueBox.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="recruit_style"]
bg_color = Color(0.1, 0.08, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.75, 0.6, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TavernOpening" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.04, 0.03, 1)

[node name="DialogueBox" parent="." instance=ExtResource("2")]
unique_name_in_owner = true

[node name="RecruitPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.08
anchor_right = 0.8
anchor_bottom = 0.88
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("recruit_style")

[node name="Margin" type="MarginContainer" parent="RecruitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="RecruitPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RecruitTitle" type="Label" parent="RecruitPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Companion 1"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="Spacer1" type="Control" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 4)

[node name="NameLabel" type="Label" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
text = "Name"
theme_override_font_sizes/font_size = 16

[node name="RecruitName" type="LineEdit" parent="RecruitPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 36)
max_length = 20
placeholder_text = "Enter name..."

[node name="Spacer2" type="Control" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 4)

[node name="GenderLabel" type="Label" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
text = "Gender"
theme_override_font_sizes/font_size = 16

[node name="GenderBox" type="HBoxContainer" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RecruitMale" type="Button" parent="RecruitPanel/Margin/VBox/GenderBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "Male"

[node name="RecruitFemale" type="Button" parent="RecruitPanel/Margin/VBox/GenderBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "Female"

[node name="Spacer3" type="Control" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 4)

[node name="ClassLabel" type="Label" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
text = "Class"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="RecruitClassGrid" type="GridContainer" parent="RecruitPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8

[node name="RecruitClassDesc" type="RichTextLabel" parent="RecruitPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
bbcode_enabled = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 14

[node name="Spacer4" type="Control" parent="RecruitPanel/Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 4)

[node name="RecruitConfirm" type="Button" parent="RecruitPanel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Confirm"
